@@ -526,7 +526,7 @@ sub quote_val {
 # ###########################################################################
 
 # ###########################################################################
-# DSNParser package 1866
+# DSNParser package 1868
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -717,7 +717,8 @@ sub get_dbh {
          binmode(STDOUT) or die "Can't binmode(STDOUT): $OS_ERROR";
       }
    }
-   if ( my ($setvars) = $self->prop('setvars') ) {
+   my $setvars = $self->prop('setvars');
+   if ( $setvars ) {
       my $sql = "SET $setvars";
       $ENV{MKDEBUG} && _d("$dbh: $sql");
       $dbh->do($sql);
@@ -2339,7 +2340,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableSyncChunk package 1829
+# TableSyncChunk package 1868
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -2380,8 +2381,7 @@ sub new {
             dbh      => $args{dbh},
             table    => $args{struct},
             col      => $col,
-            size     => $args{chunker}->size_to_rows(
-                           @args{qw(dbh database table chunksize dumper)}),
+            size     => $args{chunksize},
             %params,
          );
       }
@@ -2804,7 +2804,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableSyncer package 1827
+# TableSyncer package 1869
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -2905,6 +2905,9 @@ sub sync_table {
       return ($ch->get_changes(), ALGORITHM => $args{algorithm});
    }
 
+   my $chunksize = $args{chunker}->size_to_rows(
+         @args{qw(src_dbh src_db src_tbl chunksize dumper)}),
+
    my $class  = "TableSync$args{algorithm}";
    my $plugin = $class->new(
       handler   => $ch,
@@ -2920,7 +2923,7 @@ sub sync_table {
       checksum  => $args{checksum},
       vp        => $args{versionparser},
       quoter    => $args{quoter},
-      chunksize => $args{chunksize},
+      chunksize => $chunksize,
       where     => $args{where},
       possible_keys => [],
       versionparser => $args{versionparser},
